--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Empowering a Greener Future">
           <div class="wpb_wrapper">
               <details style="color: black; font-family: HelvLight;">
   <summary><strong>Continue Reading</strong></summary>
-
+<br>
   <p><span style="color: #Ab5943;"><strong>Reduce ecological disruption: </strong></span> Clearing Water Hyacinth from waterways will restore the natural flow and health of aquatic ecosystems.
   </p>
   
@@ -319,7 +319,8 @@ Empowering a Greener Future">
   <div class="wpb_wrapper">
       <details style="color: black; font-family: HelvLight;">
 <summary><strong>Continue Reading</strong></summary>
-<p> Habitat Restoration: We will support the restoration of critical habitats, such as seagrass beds, which are essential for the survival of manatees.</p>
+        <br>
+<p><span style="color: #Ab5943;"> Habitat Restoration:</span> We will support the restoration of critical habitats, such as seagrass beds, which are essential for the survival of manatees.</p>
 <p><span style="color: #Ab5943;"><strong>
 Awareness and Education:</strong></span> Through community outreach programs, we will raise awareness about the importance of manatee conservation and promote practices that reduce human impact on their populations.
 </p>
