--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ Empowering a Greener Future">
 
 
 
-<div class="heart" data-aos="fade-down">
+<div class="heart" data-aos="fade-down"  data-aos-duration="3000">
   <img src="webs.jpg" alt="Styled Image" class="lung">
 </div>
 
