--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Empowering a Greener Future">
     <div class="left-section">
      
     <strong>
-      <span style="color: black; line-height: 45px; letter-spacing: -0.08em; font-size: 13pt; font-family: Helvetica;" id="text">Automated Solar PV Assembly and Production</span>
+      <span style="color: #Ab5943; line-height: 45px; letter-spacing: -0.08em; font-size: 13pt; font-family: Helvetica;" id="text">Automated Solar PV Assembly and Production</span>
     </strong>
     <p>  Green Infrastructure and Power Investments PLC is pioneering innovation in renewable energy with its cutting-edge Automated Solar PV Assembly and Production facility. </p>
       <div class="wpb_wrapper">
@@ -170,7 +170,7 @@ Empowering a Greener Future">
 
 
     <strong>
-      <span style="color: black; line-height: 45px; letter-spacing: -0.08em; font-size: 13pt; font-family: Helvetica;" id="text">HVDC Submarine Transmission Line</span>
+      <span style="color: #Ab5943; line-height: 45px; letter-spacing: -0.08em; font-size: 13pt; font-family: Helvetica;" id="text">HVDC Submarine Transmission Line</span>
     </strong>
     <p>Green Infrastructure and Power Investments PLC is at the forefront of modern energy transmission with the development of a High Voltage Direct Current (HVDC) Submarine Transmission Line. </p>
     <div class="wpb_wrapper">
@@ -197,7 +197,7 @@ Empowering a Greener Future">
 
 
   <strong>
-    <span style="color: black; line-height: 45px; letter-spacing: -0.08em; font-size: 13pt; font-family: Helvetica;" id="text">280MW Solar PV Farm</span>
+    <span style="color: #Ab5943; line-height: 45px; letter-spacing: -0.08em; font-size: 13pt; font-family: Helvetica;" id="text">280MW Solar PV Farm</span>
   </strong>
   <p> Our 280 MW Solar PV Farm represents a significant leap forward in renewable energy generation. </p>
   <div class="wpb_wrapper">
@@ -220,9 +220,9 @@ Empowering a Greener Future">
 
 
 <strong>
-  <span style="color: black; line-height: 45px; letter-spacing: -0.08em; font-size: 13pt; font-family: Helvetica;" id="text">150 MWH Battery Energy Storage System (BESS)</span>
+  <span style="color: #Ab5943; line-height: 45px; letter-spacing: -0.08em; font-size: 13pt; font-family: Helvetica;" id="text">150 MWH Battery Energy Storage System (BESS)</span>
 </strong>
-<p>>Green Infrastructure and Power Investments PLC is revolutionizing energy storage with the implementation of a 150 MWh Battery Energy Storage System (BESS).</p>
+<p>Green Infrastructure and Power Investments PLC is revolutionizing energy storage with the implementation of a 150 MWh Battery Energy Storage System (BESS).</p>
 <div class="wpb_wrapper">
   <details style="color: black;">
       <summary><strong>Continue Reading</strong></summary><br>
