--- a/about.html
+++ b/about.html
@@ -198,6 +198,68 @@
 
 
 
+
+
+
+
+
+
+
+
+<br><hr><br>
+
+<div class="new-custom-container">
+  <div class="new-container-overlay"></div>
+  <div class="new-flex-container">
+
+<footer class="background" id="puss" style="font-style: bold; margin-top: 30px;">
+  
+  <div class="w3-row-padding">
+    <div class="w3-third" >
+      <h3 class="dog"> <i class="fas fa-envelope"></i> Contact 
+      </h3>
+
+      <p class="azonto"> <i class="fas fa-map-marker-alt"></i>
+        <span>Mill City Clean Energy Hub, Iwopin, Ogun State</span>
+      </p> 
+      <p><span class="email-icon"><i class="fas fa-envelope"></i> gripconsortium@gmail.com</span>
+</p>
+      <div id="map"></div></div>
+  
+    <div class="w3-third" style="color: black;">
+     
+        <h3 class="dog"><i class="fas fa-link"></i> Quick Links</h3>
+       <ul class="custom-list">
+          <li><a href="index.html" style="font-size: 15px;">Home</a></li>
+          <li><a href="csr.html" style="font-size: 15px;">Social Impact</a></li>
+          <li><a href="about.html" target="_blank" style="font-size: 15px;">About Us</a></li>
+          <li><a href="pac.html" style="font-size: 15px;"> Privacy & Cookies Policy</a></li>
+          <li><a href="tac.html" style="font-size: 15px;"> Terms and Conditions</a></li>
+          </ul> 
+      </div>
+      
+  
+    <div class="w3-third">
+      <h3 class="dog"><i class="fas fa-newspaper"></i>Subscribe</h3>
+      <p>To ensure that you receive all the latest updates and events from our organization, we invite you to subscribe to our mailing list.</p>
+    <br>
+ <a href="£" target="_blank"><button class="rect">Subscribe</button></a>
+
+ 
+    </div>
+
+
+
+  </div>
+</footer>
+</div></div>
+
+
+
+
+
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-xxxxxx" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
