--- a/csr.html
+++ b/csr.html
@@ -31,13 +31,6 @@
 
   
 
-
-
-
-
-
-
-  
   <nav class="elephant-navbar">
     <img src="logo.png" alt="Logo" class="elephant-nav-img">
     <ul class="elephant-nav-list">
@@ -77,6 +70,11 @@
 
 
 
+
+
+
+
+  
 
 <div class="image-container" style="z-index: 0;">
   <img src="xxx.png" alt="Image" style="width: 100%; object-fit: cover; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
@@ -344,6 +342,11 @@ data-aos-offset="0">
 <br><hr><br>
 
 
+
+
+
+
+  
 <div class="new-custom-container">
   <div class="new-container-overlay"></div>
   <div class="new-flex-container">
@@ -352,46 +355,43 @@ data-aos-offset="0">
   
   <div class="w3-row-padding">
     <div class="w3-third" >
-      <h3 class="azonto"> <i class="fas fa-envelope"></i> Contact 
+      <h3 class="dog"> <i class="fas fa-envelope"></i> Contact 
       </h3>
 
-      <p class="crew"> <i class="fas fa-map-marker-alt"></i>
+      <p class="azonto"> <i class="fas fa-map-marker-alt"></i>
         <span>Mill City Clean Energy Hub, Iwopin, Ogun State</span>
       </p> 
-      <p class="crew">
-        <span><i class="fas fa-envelope"></i> gripconsortium@gmail.com</span>
-      </p>
+      <p><span class="email-icon"><i class="fas fa-envelope"></i> gripconsortium@gmail.com</span>
+</p>
       <div id="map"></div></div>
   
     <div class="w3-third" style="color: black;">
      
-        <h3 class="azonto" style=" text-align: center;"><i class="fas fa-link"></i> Quick Links</h3>
-        <ul class="custom-list">
+        <h3 class="dog"><i class="fas fa-link"></i> Quick Links</h3>
+       <ul class="custom-list">
           <li><a href="index.html" style="font-size: 15px;">Home</a></li>
           <li><a href="csr.html" style="font-size: 15px;">Social Impact</a></li>
           <li><a href="about.html" target="_blank" style="font-size: 15px;">About Us</a></li>
           <li><a href="pac.html" style="font-size: 15px;"> Privacy & Cookies Policy</a></li>
           <li><a href="tac.html" style="font-size: 15px;"> Terms and Conditions</a></li>
-
-        </ul>
+          </ul> 
       </div>
       
-      <div class="w3-third">
-        <h3><i class="fas fa-newspaper"></i>Subscribe</h3>
-        <p>To ensure that you receive all the latest updates and events from our organization, we invite you to subscribe to our mailing list.</p>
-      <br>
-   <a href="£" target="_blank"><button class="rect">Subscribe</button></a>
   
-   
-      </div>
+    <div class="w3-third">
+      <h3 class="dog"><i class="fas fa-newspaper"></i>Subscribe</h3>
+      <p>To ensure that you receive all the latest updates and events from our organization, we invite you to subscribe to our mailing list.</p>
+    <br>
+ <a href="£" target="_blank"><button class="rect">Subscribe</button></a>
+
+ 
+    </div>
+
+
 
   </div>
 </footer>
-</div>
-
-
-
-
+</div></div>
 
 
 
