--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Empowering a Greener Future">
 
 
     <div class="right-section">
-        <div class="owl-carousel owl-theme">
+        <div class="owl-carousel owl-theme"  style="padding-top: 65px;>
             <div class="item"><img src="sf.jpeg" alt="Image 1"></div>
             <div class="item"><img src="sff.jpeg" alt="Image 2"></div>
             <div class="item"><img src="bess.jpeg" alt="Image 3"></div>
