--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Empowering a Greener Future">
         <a href="about.html"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">About Us</span></a>
         <div class="elephant-dropdown-content">
           <a href="#">The Board</a>
-          <a href="#">Our History</a>
+      
           <a href="#">Project Specifications</a>
         </div>
       </div>    
@@ -372,7 +372,7 @@ Empowering a Greener Future">
        <ul class="custom-list">
           <li><a href="index.html" style="font-size: 15px;">Home</a></li>
           <li><a href="csr.html" style="font-size: 15px;">Social Impact</a></li>
-          <li><a href="about.html" target="_blank" style="font-size: 15px;">About Us</a></li>
+          <li><a href="about.html" style="font-size: 15px;">About Us</a></li>
           <li><a href="pac.html" style="font-size: 15px;"> Privacy & Cookies Policy</a></li>
           <li><a href="tac.html" style="font-size: 15px;"> Terms and Conditions</a></li>
           </ul> 
