--- a/csr.html
+++ b/csr.html
@@ -371,7 +371,7 @@ data-aos-offset="0">
        <ul class="custom-list">
           <li><a href="index.html" style="font-size: 15px;">Home</a></li>
           <li><a href="csr.html" style="font-size: 15px;">Social Impact</a></li>
-          <li><a href="about.html" target="_blank" style="font-size: 15px;">About Us</a></li>
+          <li><a href="about.html" style="font-size: 15px;">About Us</a></li>
           <li><a href="pac.html" style="font-size: 15px;"> Privacy & Cookies Policy</a></li>
           <li><a href="tac.html" style="font-size: 15px;"> Terms and Conditions</a></li>
           </ul> 
