--- a/index.html
+++ b/index.html
@@ -173,10 +173,13 @@ Empowering a Greener Future">
 
 
 
+<br><br>
+
+
   <div class="main-container">
 
 
-    <div class="left-section">
+    <div class="gsc-left">
      
     <strong>
       <span style="color: #Ab5943; line-height: 45px; letter-spacing: -0.08em; font-size: 13pt; font-family: Helvetica;" id="text">Automated Solar PV Assembly and Production</span>
@@ -270,7 +273,7 @@ Empowering a Greener Future">
 
 
 
-
+<br>
 
 
 
@@ -352,11 +355,7 @@ Empowering a Greener Future">
                           <div id="content3" class="hiddenContent" style="display: block;">
 
 </div>
-                          <a href="javascript:void(0)" class="showMore" data-target="content3" style="display: none;">Know more <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
-                              <path fill-rule="evenodd" d="M16.28 11.47a.75.75 0 010 1.06l-7.5 7.5a.75.75 0 01-1.06-1.06L14.69 12 7.72 5.03a.75.75 0 011.06-1.06l7.5 7.5z" clip-rule="evenodd"></path>
-                            </svg>
-                          </span></a>
-                      </div>
+</div>
                   </div>
                   <!-- Background Bubble -->
                   <div class="what-we-do-bubble">
