--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
   
 
 <div class="image-container" style="z-index: 0;">
-  <img src="xxx.png" alt="Image" style="width: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
+  <img src="sf.jpeg" alt="Image" style="width: 100%; height: 100%; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
   <div class="caption"> <span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 22pt; font-family: Helvetica;">About Us</span></div>
 </div>
 
