--- a/about.html
+++ b/about.html
@@ -312,7 +312,7 @@
                                                   <h3 class="elementor-cta__title elementor-cta__content-item elementor-content-item elementor-animated-item--shrink"> <strong>
                                                     <span style="color: black; line-height: 45px; letter-spacing: -0.08em; font-size: 17pt; font-family: Helvetica;" id="text">Our Impact</span>
                                                   </strong></h3>
-                                                  <div class="elementor-cta__description elementor-cta__content-item elementor-content-item elementor-animated-item--shrink">Learn about our actions and commitments to align our business practices with the sustainable development goals					</div>
+                                                  <div class="elementor-cta__description elementor-cta__content-item elementor-content-item elementor-animated-item--shrink">Learn about our actions and commitments to align our business practices with our social responsibility				</div>
                                                   
                                                   
                                               </div>
