--- a/about.html
+++ b/about.html
@@ -56,6 +56,7 @@
     
 
   
+  
   <nav class="elephant-navbar">
     <img src="logo.png" alt="Logo" class="elephant-nav-img">
     <ul class="elephant-nav-list">
@@ -76,7 +77,7 @@
 
 
       <div class="elephant-dropdown">
-      <li class="birch"><a href="#"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">Corporate Governance</span></a></li>
+      <li class="birch"><a href="govern.html"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">Corporate Governance</span></a></li>
       <div class="elephant-dropdown-content">
         <a href="govern.html">Internal Control</a>
         <a href="govern.html">Board Governance</a>
@@ -118,7 +119,6 @@
     
     </div>
   </nav>
-
 
 
 
