--- a/pac.html
+++ b/pac.html
@@ -39,9 +39,8 @@
       <div class="elephant-dropdown">
       <li class="pine"><a href="#puss"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">About Us</span></a></li>
         <div class="elephant-dropdown-content">
-          <a href="#">The Board</a>
-          <a href="#">Our History</a>
-          <a href="#">Project Specifications</a>
+          <a href="about.html">The Board</a>
+          <a href="about.html">Project Specifications</a>
         </div>
       </div>    
 
