--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
       <li class="oak"><a href="index.html"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">Home</span></a></li>
 
       <div class="elephant-dropdown">
-      <li class="pine"><a href="#puss"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">About Us</span></a></li>
+      <li class="pine"><a href="about.html"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">About Us</span></a></li>
         <div class="elephant-dropdown-content">
           <a href="about.html">The Board</a>
           <a href="about.html">Project Specifications</a>
