--- a/csr.html
+++ b/csr.html
@@ -387,7 +387,7 @@ data-aos-offset="0">
       </h3>
 
       <p class="azonto"> <i class="fas fa-map-marker-alt"></i>
-        <span>Mill City Clean Energy Hub, Iwopin, Ogun State</span>
+        <span>4th Floor Tower C - Churchgate Plaza Central Business District - Abuja, Nigeria</span>
       </p> 
       <p><span class="email-icon"><i class="fas fa-envelope"></i> gripconsortium@gmail.com</span>
 </p>
