--- a/govern.html
+++ b/govern.html
@@ -414,7 +414,7 @@
         </h3>
   
         <p class="azonto"> <i class="fas fa-map-marker-alt"></i>
-          <span>Mill City Clean Energy Hub, Iwopin, Ogun State</span>
+          <span>4th Floor Tower C - Churchgate Plaza Central Business District - Abuja, Nigeria</span>
         </p> 
         <p><span class="email-icon"><i class="fas fa-envelope"></i> gripconsortium@gmail.com</span>
   </p>
