--- a/index.html
+++ b/index.html
@@ -184,8 +184,15 @@ Empowering a Greener Future">
 
   <div class="flex-item-right">
 <p>
- <span class="all-caps"> GREEN INFRASTRUCTURE AND POWER INVESTMENTS PLC </span> is a company dedicated to advancing sustainable energy solutions. Their current flagship initiative involves the comprehensive development and management of a Solar Photovoltaic (PV) Farm in Mill City Clean Energy City, Iwopin, Ogun State. This project will feature a 250 MWA solar farm and a 63 MW/126 MWh Battery Energy Storage System (BESS).<br><br>
- The company's scope of work encompasses the entire project lifecycle, including design, construction, financing, commissioning, operation, and maintenance.</p>
+ <span class="all-caps"> The Green Infrastructure and Power Investments consortium was set up to be a fully
+  integrated sustainability-focused energy player ,leaning towards gas infrastructure
+  investments as well as clean energy manufacturing and electrification projects.
+  The Consortium comprises of a number of Chinese State Owned Entities (SOE) companies
+  as well as a number of international market players working in unison to support the
+  energy industryand boost the Nigerianeconomy.<br>
+  Our global expertise with a combined strength in strategy and innovation enables us to
+  grow as an energy solutions leader with a strong commitment to the United Nations
+  Sustainable Development Goals (SDG).</p>
  <a href="about.html" class="pill-button">Continue Reading</a>
   </div>
   
