--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Empowering a Greener Future">
   <div class="flex-item-right">
 <p>
  <span class="all-caps"> The Green Infrastructure and Power Investments consortium was set up to be a fully
-  integrated sustainability-focused energy player ,leaning towards gas infrastructure
+  integrated sustainability-focused energy player, leaning towards gas infrastructure
   investments as well as clean energy manufacturing and electrification projects.
   The Consortium comprises of a number of Chinese State Owned Entities (SOE) companies
   as well as a number of international market players working in unison to support the
@@ -281,7 +281,7 @@ Empowering a Greener Future">
 
 
 
-    <div class="right-section">
+    <div class="right-section"><br><br><br><br>
         <div class="owl-carousel owl-theme">
             <div class="item"><img src="sf.jpeg" alt="Image 1"></div>
             <div class="item"><img src="sff.jpeg" alt="Image 2"></div>
