--- a/about.html
+++ b/about.html
@@ -184,24 +184,31 @@
 <div class="flex-container">
 
   <div class="flex-item goat" data-aos="flip-left">
- <p class="para"><span style="color: #Ab5943; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">GREEN INFRASTRUCTURE AND POWER INVESTMENTS PLC </span>is a company dedicated to advancing sustainable energy solutions. Their current flagship initiative involves the comprehensive development and management of a Solar Photovoltaic (PV) Farm in Mill City Clean Energy City, Iwopin, Ogun State. <br><br>This project will feature a 250 MWA solar farm and a 63 MW/126 MWh Battery Energy Storage System (BESS).
+ <p class="para"><span style="color: #Ab5943; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">GREEN INFRASTRUCTURE AND POWER INVESTMENTS PLC </span>is a company dedicated to advancing sustainable energy solutions. Their current flagship initiative involves the comprehensive development and management of a Solar Photovoltaic (PV) Farm in Mill City Clean Energy City, Iwopin, Ogun State.
     <br>
-<br><br>
+
 
     <div class="wpb_text_column wpb_content_element">
       <div class="wpb_wrapper">
         <details style="color: black;">
-            <summary><strong>Continuie Reading</strong></summary>
-            <p>If you are a visitor to our website we act as the ‘data controller’ of personal data. This means we</p>
-            <p>determine how and why your data are processed.</p>
-            <p><strong>Your Responsibilities</strong></p>
-            <ol>
-                <li>Read this Privacy Policy</li>
-                <li>If you provide us with personal information about other people, please ensure you are</li>
-                <li>authorized to share their information. If others give us your information, we will only use that information for the specific reason for which it was provided to us.</li>
-                <li>By submitting the information, you confirm that you have the right to authorize us to process it on your behalf in accordance with this Privacy Policy.</li>
-            </ol>
-            <p>&nbsp;</p>
+            <summary><strong>Continue Reading</strong></summary><br>
+            <p>The Green Infrastructure and Power Investments consortium was set up to be a fully
+              integrated sustainability-focused energy player ,leaning towards gas infrastructure
+              investmentsas well as clean energymanufacturingand electrificationprojects.
+              The Consortiumcomprises of a number of Chinese State Owned Entities (SOE) companies
+              as well as a number of international market players working in unison to support the
+              energy industryand boost the Nigerianeconomy.<br><br>
+              Our global expertise with a combined strength in strategy and innovation enables us to
+              grow as an energy solutions leader with a strong commitment to the United Nations
+              Sustainable Development Goals (SDG).<br><br>
+              The Green Infrastructure and Power Investments Consortium is aiming to address the
+              power shortage challenges in the West African regional markets through investments in
+              Brown field domestic and international energyprojects.<br><br>
+              All of our projects will see the creation of a large number of skilled jobs alongside a
+              significant increase in the overall national power generating capacity over the next few
+              years, ensuring that our strategic initiatives form part of our energy investments agenda,
+              providing a quick solution for immediate power needs while fostering sustainable
+              development</p>
         </details>
     </div>
   </div>
