--- a/about.html
+++ b/about.html
@@ -184,7 +184,12 @@
 <div class="flex-container">
 
   <div class="flex-item goat" data-aos="flip-left">
- <p class="para"><span style="color: #Ab5943; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">GREEN INFRASTRUCTURE AND POWER INVESTMENTS PLC </span>is a company dedicated to advancing sustainable energy solutions. Their current flagship initiative involves the comprehensive development and management of a Solar Photovoltaic (PV) Farm in Mill City Clean Energy City, Iwopin, Ogun State.
+ <p class="para"><span style="color: #Ab5943; line-height: 5px; letter-spacing: -0.08em; font-size: 12pt; font-family: Helvetica;">GREEN INFRASTRUCTURE AND POWER INVESTMENTS PLC </span>is a company dedicated to advancing sustainable energy solutions and was set up to be a fully
+  integrated sustainability-focused energy player ,leaning towards gas infrastructure
+  investments as well as clean energymanufacturingand electrificationprojects.
+  The Consortiumcomprises of a number of Chinese State Owned Entities (SOE) companies
+  as well as a number of international market players working in unison to support the
+  energy industryand boost the Nigerianeconomy.<br><br>
     <br>
 
 
@@ -192,12 +197,7 @@
       <div class="wpb_wrapper">
         <details style="color: black;">
             <summary><strong>Continue Reading</strong></summary><br>
-            <p>The Green Infrastructure and Power Investments consortium was set up to be a fully
-              integrated sustainability-focused energy player ,leaning towards gas infrastructure
-              investmentsas well as clean energymanufacturingand electrificationprojects.
-              The Consortiumcomprises of a number of Chinese State Owned Entities (SOE) companies
-              as well as a number of international market players working in unison to support the
-              energy industryand boost the Nigerianeconomy.<br><br>
+            <p>
               Our global expertise with a combined strength in strategy and innovation enables us to
               grow as an energy solutions leader with a strong commitment to the United Nations
               Sustainable Development Goals (SDG).<br><br>
