--- a/about.html
+++ b/about.html
@@ -189,10 +189,8 @@
   investments as well as clean energymanufacturingand electrificationprojects.
   The Consortiumcomprises of a number of Chinese State Owned Entities (SOE) companies
   as well as a number of international market players working in unison to support the
-  energy industryand boost the Nigerianeconomy.<br><br>
-    <br>
-
-
+  energy industryand boost the Nigerianeconomy.
+ 
     <div class="wpb_text_column wpb_content_element">
       <div class="wpb_wrapper">
         <details style="color: black;">
