--- a/csr.html
+++ b/csr.html
@@ -105,7 +105,7 @@
   
 
 <div class="image-container" style="z-index: 0;">
-  <img src="xxx.png" alt="Image" style="width: 100%; object-fit: cover; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
+  <img src="social.jpg" alt="Image" style="width: 100%; object-fit: cover; box-shadow: 0 4px 16px rgba(171, 89, 67, 0.8);">
   <div class="caption"><span style="color: black; line-height: 5px; letter-spacing: -0.08em; font-size: 24pt; font-family: Helvetica;">Social Impact</span></div>
 </div>
 
